// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HelloWorld > increments count when button is clicked 1`] = `
"<h1 data-test="titulo">Hello Vitest</h1>
<div class="card"><button data-test="incremento" type="button">count is 0</button>
  <p> Edit <code>components/HelloWorld.vue</code> to test HMR </p>
</div>
<p> Check out <a href="https://vuejs.org/guide/quick-start.html#local" target="_blank">create-vue</a>, the official Vue + Vite starter </p>
<p> Install <a href="https://github.com/vuejs/language-tools" target="_blank">Volar</a> in your IDE for a better DX </p>
<p class="read-the-docs">Click on the Vite and Vue logos to learn more</p>"
`;

exports[`HelloWorld > increments count when button is clicked 2`] = `
"<h1 data-test="titulo">Hello Vitest</h1>
<div class="card"><button data-test="incremento" type="button">count is 1</button>
  <p> Edit <code>components/HelloWorld.vue</code> to test HMR </p>
</div>
<p> Check out <a href="https://vuejs.org/guide/quick-start.html#local" target="_blank">create-vue</a>, the official Vue + Vite starter </p>
<p> Install <a href="https://github.com/vuejs/language-tools" target="_blank">Volar</a> in your IDE for a better DX </p>
<p class="read-the-docs">Click on the Vite and Vue logos to learn more</p>"
`;

exports[`HelloWorld > increments count when button is clicked 3`] = `
"<h1 data-test="titulo">Hello Vitest</h1>
<div class="card"><button data-test="incremento" type="button">count is 2</button>
  <p> Edit <code>components/HelloWorld.vue</code> to test HMR </p>
</div>
<p> Check out <a href="https://vuejs.org/guide/quick-start.html#local" target="_blank">create-vue</a>, the official Vue + Vite starter </p>
<p> Install <a href="https://github.com/vuejs/language-tools" target="_blank">Volar</a> in your IDE for a better DX </p>
<p class="read-the-docs">Click on the Vite and Vue logos to learn more</p>"
`;

exports[`HelloWorld > increments count when button is clicked 4`] = `
"<h1 data-test="titulo">Hello Vitest</h1>
<div class="card"><button data-test="incremento" type="button">count is 3</button>
  <p> Edit <code>components/HelloWorld.vue</code> to test HMR </p>
</div>
<p> Check out <a href="https://vuejs.org/guide/quick-start.html#local" target="_blank">create-vue</a>, the official Vue + Vite starter </p>
<p> Install <a href="https://github.com/vuejs/language-tools" target="_blank">Volar</a> in your IDE for a better DX </p>
<p class="read-the-docs">Click on the Vite and Vue logos to learn more</p>"
`;
